更新几个表的结构和内容
