# internal/data/ent/schema/category.go
@@ -1,0 +1,40 @@
+package schema
+
+import (
+	"entgo.io/ent"
+	"entgo.io/ent/dialect"
+	"entgo.io/ent/dialect/entsql"
+	"entgo.io/ent/schema"
+	"entgo.io/ent/schema/field"
+)
+
+// CCategory holds the schema definition for the CCategory entity.
+type Category struct {
+	ent.Schema
+}
+
+func (Category) Annotations() []schema.Annotation {
+	return []schema.Annotation{
+		entsql.Annotation{Table: "c_category"},
+	}
+}
+
+// Fields of the CCategory.
+func (Category) Fields() []ent.Field {
+
+	return []ent.Field{
+
+		field.Int32("id").SchemaType(map[string]string{
+			dialect.MySQL: "int(20)", // Override MySQL.
+		}).Comment("类别").Unique(),
+
+		field.Int32("category_id").SchemaType(map[string]string{
+			dialect.MySQL: "int(11)", // Override MySQL.
+		}).Optional().Comment("分类的ID"),
+
+		field.String("category_name").SchemaType(map[string]string{
+			dialect.MySQL: "varchar(32)", // Override MySQL.
+		}).Optional().Comment("名称"),
+	}
+
+}
